tests/baselines/reference/parserErrorRecovery_IncompleteMemberVariable2.errors.txt
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/IncompleteMemberVariables/parserErrorRecovery_IncompleteMemberVariable2.ts(12,20): error TS2304: Cannot find name 'C'.
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/IncompleteMemberVariables/parserErrorRecovery_IncompleteMemberVariable2.ts(12,22): error TS1442: Expected '=' for property initializer.


==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/IncompleteMemberVariables/parserErrorRecovery_IncompleteMemberVariable2.ts (2 errors) ====
    // Interface
    interface IPoint {
        getDist(): number;
    }
    
    // Module
    module Shapes {
    
        // Class
        export class Point implements IPoint {
    
            public con:C "hello";
                       ~
!!! error TS2304: Cannot find name 'C'.
                         ~~~~~~~
!!! error TS1442: Expected '=' for property initializer.
            // Constructor
            constructor (public x: number, public y: number) { }
    
            // Instance member
            getDist() { return Math.sqrt(this.x * this.x + this.y * this.y); }
    
            // Static member
            static origin = new Point(0, 0);
        }
    
    }
    
    // Local variables
    var p: IPoint = new Shapes.Point(3, 4);
    var dist = p.getDist();
    